<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">Perlu Dilindungi</string>
	<string name="berita_menu">Berita</string>
	<string name="faskes_menu">Faskes</string>
	<string name="bookmarks_menu">Bookmark</string>
	<string name="check_in_menu">Check-in</string>
	<string name="default_berita_content_description">Cover Berita</string>
	<string name="page_title_check_in">Check-in</string>
	<string name="title_news_fragment">Berita Covid-19</string>
	<string name="title_faskes_search_fragment">Fasilitas Kesehatan</string>
	<string name="title_bookmarks_fragment">Bookmarks Faskes</string>
	<string name="title_check_in_fragment">Check-in</string>
	<string name="default_progress_bar">Loading…</string>
	<string name="check_in_success">Berhasil</string>
	<string name="check_in_fail">Gagal</string>
	<string name="default_faskes_name">Lempur Gn. Raya</string>
	<string name="default_faskes_type">Rumah Sakit</string>
	<string name="default_faskes_phone" tools:ignore="TypographyDashes">0853-68967771</string>
	<string name="default_faskes_code">5060601</string>
	<string name="default_faskes_address">Lempur Tengah, Gn. Raya, Kabupaten Kerinci, Jambi 37174, Indonesia</string>
	<string name="default_faskes_status">Siap vaksinasi</string>
	<string name="item_faskes_kode_label">Kode: </string>
	<string name="bookmarked">Bookmarked</string>
	<string name="unbookmarked">Unbookmarked</string>
	<string name="open_in_gmaps">Open in Google Maps</string>
	<string name="label_place">alamat</string>
	<string name="label_status">status vaksinasi</string>
	<string name="label_phone">telp.</string>

	<string-array name="provinsi">
		<item>Jawa Barat</item>
		<item>Jawa Tengah</item>
		<item>Jawa Timur</item>
	</string-array>

	<string-array name="kota">
		<item>Bandung</item>
		<item>Tasikmalaya</item>
	</string-array>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="provinsi_selection_label">Provinsi</string>
	<string name="default_province_selected">Tidak ada provinsi yang dipilih</string>
	<string name="cities_selection_label">Kota</string>
	<string name="default_city_selected">Tidak ada kota yang dipilih</string>
</resources>